# vietnam-personal-id

./: .eslintrc.js  .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml
dev/: __main__.py  countries-code.csv  iso_countries.csv  main.py  pyproject.toml
src/: App.vue  countries.json  main.ts  models.ts  translation.ts  utils.ts  vn-provinces.json
src/components/: HeaderBar.vue  ResultDisplay.vue
